refactor: change path parameters to query parameter on metrics/voters
